# mmcore

./: .dockerignore  .env  .gitignore  .gitmodules  .graphqlconfig  .zshrc  Dockerfile  README.md  build.py  build.sh  buildme.sh  clean  clean.py  docker-build-step1.sh  docker-build-step2.sh  docker-compose.yaml  docker-compose.yml  env.json  env.yaml  environment.yml  main.py  meta.yml  n8n.yaml  push.sh  pyproject.toml  requirements.txt  run.sh  runme.sh  schema.graphql  setup.py  setupsecrets.py  tempset.rtf  test.sh  upd-version.sh  updversion.py
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yml  docker-cxm-publish-v2.yml  docker-publish.yml  poetry-build.yml  pypi.yml  python-package.yml  upload_pypi.yml
.rhinocode/: rhino8.sh
Writerside/: c.list  md.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: glossary.xml
Writerside/snippets/: mmcore  polycurve.py
Writerside/topics/: 2D-Surfaces.md  2d_cases.md  AABB-Example.md  Geometry.md  GeometryExamples.topic  GroupFabric.md  Installation.md  Mesh-Fusing-User-Guide.topic  Mesh-Fusion-Overview.topic  Mesh-Fusion-Perfomance.topic  Mesh-Fusion-xml.topic  Mesh-Fusion.md  Mesh-Overwiew.topic  Mesh.md  Mesh.topic  Nd-Objects-Implementation.md  Nd-Objects.md  Overview.md  PDE-Example-Usage.md  PDE.md  Plane.md  PlaneLinePointSurface-Class.md  Point-Data-Type.md  PolyCurve-Usage.md  PolyCurve.md  Polygon-Clipping-Exanple.md  Polygon-Clipping.md  Polyline.md  Rectangle.md  Refiment.md  Test-Snippets.topic  Usage.md  User-Guides.topic  Vectorization.md  circles.md  closest-pt.topic  crv.md  mmcore_numeric_curve_intersection.md  starter-topic.md  variable_offset.md
data/: temp3d.json
debugview/: apollo_cxm.kt  index.html  index.js  package-lock.json  package.json
debugview/v2/: index.html
docker/amd64/: env.yaml
docker/arm64v8/: Dockerfile  env.yaml
docs/: 2d_cases.md  variable_offset.md
examples/: bspline.py  surface_closest_points.py
examples/animation/: dynamic_beams.py  oriented_circles.py
examples/anything/: dockertest.py  extrusion.js  simpleapp.py  testbuild.py
examples/bodies_intersection/: numba_body_intersections.py  pure_body_intersections.py
examples/ccx/: ccx_complex_task.py  ccx_many_int.py  ccx_one_int.py  cxx_many_int-curve1.json  cxx_many_int-curve2.json
examples/construction/: ruled_surface.py
examples/conversions/: geometry_from_threejs.py  object_fron_threejs.py  todxf.py
examples/csg/: panel.py  simple.py
examples/csx/: nurbs_robust_csx.py
examples/data/: profile.json
examples/datastructures/: props.py
examples/dynamic/: bools.py  circle.py  cpts.py  cpts2.py  hypar.py  lines.py  lines_with_csg.py  mutable_example_start_params.json  solid_loft_extrusion.py  spring.py  sweep.py  test-client.http  test.py  walls.py
examples/ecs/: classic.py
examples/extrusion/: advans_tesselation.py  simple_extrusion.py  with_csg.py
examples/generic_sequence/: profile_sequence.py  profile_sequence_server.py
examples/geometry/: bools.py  buffer.py  cpts.py  cpts2.py  cut.py  lines.py  polyhedron.py  polyhedron_redis.py  test-client.http  triangle_grid.py  walls.py
examples/gltf/: convert.py  convert2.py  scene-5.gltf
examples/picker/: README.md  index.html  main.js  main.py
examples/primitives/: polygon.py  rectangle.py  rounded_rectangle.py  simple_sd_rect.py
examples/props-update/: .dockerignore  Dockerfile  boxes.py  build.sh  main.py
examples/shared_state_server/: embed.py  use_ipython.py
examples/skeleton_drawings/: README.md  skeleton_drawings.py
examples/ssx/: autoimplicit.py  implicit_intersections.py  numba_intersections.py  nurbs_nurbs_intersection_1.py  nurbs_nurbs_intersection_2.py  parametric_surfaces_intersection.py
examples/step/: write.py  write_step.md
k8/: mmcore.yaml
lht20/: podsistema.py
mmcore/: __init__.pxd  __init__.py  __main__.py  _test_data.py  iterutils.py  mmbusybox  mmbusybox.py  params.py  testlib.py
mmcore/addons/: __init__.py  addons.py  (+2 more)
notes/: README.md  brep.md  isi.md  pypy-performance.md  surface_closest_point.md
tests/: app2.py  arc.py  closest_point.py  data.3dm  dockertest.py  dual_contour_3d.py  figures.json  figures1.json  gqljson.json  hyp.py  install_to_rhinocode.sh  localparams.py  mmcore_base.py  pair1.json  s3_descriptors.py  shapetest.py  simpleapp.py  ssx-test1.json  ssx-test2.json  test-gql-server.http  test_basic_A.py  test_boundary_intersection.py  test_bsplines_intersections.py  test_buffer.py  test_circle_circle_tersection2d.py  test_closest_point.py  test_csx.py  test_curve_bool.py  test_executable_node.py  test_experimental_plane.py  test_extract_mesh_union_keys.py  test_intersections.py  test_isocurve.py  test_line.py  test_mp.py  test_newthon.py  test_newton.py  test_numeric_curvature.py  test_nurbs_algo.py  test_nurbs_curve.py  (+15 more)
(+639 files in other folders)
