[build-system]
requires = ["poetry-core", "cython", "numpy", "setuptools", "pytest", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mmcore"
version = "0.32.1"
description = "mmcore"
authors = ["Andrew Astakhov <aa@contextmachine.ru>", ]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = { version = "^1.24.0" }
earcut = { version = "^1.1.5" }
scipy = {version = ">=1.9.0,<1.12.0"}
pyquaternion = "^0.9.9"
more-itertools = "^10.1.0"



[tool.poetry.build]
generate-setup-file = false
script = 'build.py'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
matplotlib = { version = "^3.8.3", optional = true }
pydoc-markdown = {version = "^4.8.2", optional = true}
ipython = {version = "*", optional = true}
cython = "*"
cython-lint = "*"
python-dotenv = "^1.0.0"
setuptools="*"

[tool.cython-lint]
max-line-length = 140
ignore = ['E503', 'E504']

