[build-system]
requires = ["poetry-core", "cython", "numpy", "setuptools", "pytest", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mmcore"
version = "0.49.4"
description = "mmcore"
authors = ["Andrew Astakhov <aa@contextmachine.ru>", ]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = { version = "*" }
earcut = { version = "^1.1.5" }
scipy = {version = "*"}
pyquaternion = "^0.9.9"
more-itertools = "^10.1.0"
steputils = "^0.1"


[tool.poetry.build]
generate-setup-file = false
script = 'build.py'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
matplotlib = { version = "^3.8.3", optional = true }
pydoc-markdown = {version = "^4.8.2", optional = true}
ipython = {version = "*", optional = true}
cython = "*"
cython-lint = "*"
python-dotenv = "^1.0.0"
setuptools="*"

[tool.cython-lint]
max-line-length = 140
ignore = ['E503', 'E504']

[tool.poetry.extras]
ipython=["ipython"]
renderer = ["plotly", "kaleido", "pyopengl", "pyrr",'glfw']
all = ["renderer","ipython"]

[tool.poetry.plugins."mmcore.renderer"]
"renderer" = "mmcore.renderer"


[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312','py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \gen
  | \.idea
  | \.svn
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .computer_use_demo
  | _build
  | buck-out
  | build
  | dist
)/
'''